Auto-download Mojang's managed JRE per Minecraft version, add preflight Java version check