@@ -13,6 +13,7 @@ app/services/loaders/          # Fabric/Forge/NeoForge - см. loaders.md
 app/services/mojang.py         # piston-meta: version manifest, client.jar, библиотеки, ассеты, natives
 app/services/modrinth.py       # резолвер модов + рекурсивные required-зависимости
 app/services/local_mods.py     # локально запабленные моды (POST /mods/local) - парсинг jar'а, замена по (mod_id, version)
+app/services/jre.py            # автозагрузка управляемого JRE от Mojang - см. "Выбор JDK" ниже
 app/services/launch.py         # сборка java-командной строки (подстановка ${...}, OS-правила)
 app/services/auth.py           # offline-авторизация (оффлайн UUID, как у ванильного клиента)
 app/services/cache.py          # реестр shared-кэша поверх SQLite (для /cache/*)
@@ -67,15 +68,34 @@ Modrinth целиком.
 
 ## Выбор JDK
 
-Каждый vanilla version json несёт `javaVersion.majorVersion` (например `21` для 1.21.1, `17`
-для 1.20.1) - тянем его вместе с остальным version json и резолвим java-бинарник под конкретную
-версию через `Settings.resolve_java_bin` (`app/config.py`): смотрим `java_homes[majorVersion]`
-(заполняется из переменных окружения `JAVA_HOME_<N>`, например `JAVA_HOME_21=C:\...\jdk-21`) и
-если там есть `bin/java(.exe)` - используем его; иначе просто `"java"` из `PATH`, как раньше.
-Так один и тот же сервис может гонять и старые версии (Java 8/17), и новые (Java 21+), если
-дефолтная `java` в `PATH` не подходит всем сразу. Резолвнутое значение попадает в
-`launch.build_command(java_bin=...)` вместо дефолтного `"java"`; сам major version заодно
-сохраняется в реестре кэша (`GET /cache/versions` → `java_major_version`) для справки.
+Каждый vanilla version json несёт `javaVersion` (например `{"component": "java-runtime-epsilon",
+"majorVersion": 25}` для 26.x, `{"component": "java-runtime-delta", "majorVersion": 21}` для
+1.21.1) - тянем его вместе с остальным version json и резолвим java-бинарник под конкретную
+версию по цепочке приоритетов (`instance_pool.py`):
+
+1. **`JAVA_HOME_<majorVersion>`**, если настроена (`Settings.java_home_override`,
+   `app/config.py`) - явный оверрайд для тех, кто хочет свой конкретный JDK.
+2. **Управляемый JRE от Mojang** (`app/services/jre.py:ensure_runtime`) - то же самое, что делает
+   официальный лаунчер: тянет фиксированный индекс
+   `piston-meta.mojang.com/.../java-runtime/.../all.json`, находит нужный `component`
+   (`java-runtime-alpha/beta/gamma/delta/epsilon`, `jre-legacy`) для текущей ОС, качает полный
+   список файлов рантайма (сотни файлов, каждый с sha1, тот же механизм, что и ассеты) в общий
+   кэш `cache/runtimes/<component>/` и возвращает путь к `bin/java(.exe)`. Пользователю вообще
+   не нужно самому ставить и настраивать JDK под каждую встречающуюся версию.
+3. **Голый `"java"` из `PATH`** - если по какой-то причине managed-рантайм не скачался
+   (например Mojang не публикует нужный `component` под текущую ОС).
+
+Резолвнутое значение попадает в `launch.build_command(java_bin=...)` вместо дефолтного
+`"java"`; major version заодно сохраняется в реестре кэша (`GET /cache/versions` →
+`java_major_version`), а сам managed-рантайм регистрируется отдельной записью с `kind=runtime`.
+
+Отдельно, перед запуском сервис разово гоняет `<резолвнутый java_bin> -version`, парсит
+major-версию из вывода и, если она меньше требуемой (managed-рантайм не скачался и голый `java`
+из PATH оказался слишком старым), падает сразу с понятной ошибкой (`status: failed`, а не
+`crashed`) вида `Minecraft 26.2 needs Java 25+, but 'java' resolves to Java 17. Set
+JAVA_HOME_25 to a Java 25+ install and restart modrig.` - вместо того, чтобы стартовать
+заведомо обречённый процесс и потом разбирать малопонятный крэш JVM (например `Unrecognized
+option: --sun-misc-unsafe-memory-access=allow` - флаг, которого не знают JDK старше ~23).
 
 ## Конкурентность
 
